# docusketch_todoapp

./: README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
todoapp/: filters.py  models.py  serializers.py  views.py
todoapp/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
